--- a/startbootstrap-clean-blog-gh-pages/css/styles.css
+++ b/startbootstrap-clean-blog-gh-pages/css/styles.css
@@ -10,6 +10,23 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+ .box {
+  display: block;
+  width: 100%;
+  height: 51px;
+  border: solid 1px #dadada;
+  padding: 10px 14px 10px 14px;
+  box-sizing: border-box;
+  background: #fff;
+  position: relative;
+}
+ #signup-content{
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  width: 460px;
+ }
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
